--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
               <a href="#" class="btn btn-primary">Explore Services</a>
 
-              <a href="#" class="btn btn-outline">Contact Us</a>
+              <a href="#footer" class="btn btn-outline">Contact Us</a>
 
             </div>
 
