--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <div class="btn-wrapper">
 
-              <a href="#" class="btn btn-primary">Explore Services</a>
+              <a href="#services" class="btn btn-primary">Explore Services</a>
 
               <a href="#footer" class="btn btn-outline">Contact Us</a>
 
